1.disable http listen 2.add some config fields

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -1,12 +1,45 @@
-httpport = 8080
-httpaddr = localhost
-
-db.host = localhost
+# 存放慢日志的数据库
+db.host = 192.168.1.1
 db.user = user
-db.password = ""
+db.password = "password"
 db.port = 3306
 db.name = name
 db.prefix = ""
 db.timezone = Asia/Shanghai
 db.retry = 2
 
+# 邮件发送超时时间
+myslowreport.timeout = 30
+# 每天凌晨4点同步各个mysql服务器的慢日志
+myslowreport.syncmysqlslowlogspec = "0, 0, 4, *, *, *"
+# 每天早上7点生成报告邮件并发送
+myslowreport.sendreportemailspec = "0, 0, 7, *, *, *"
+# 邮件发送失败重试次数
+myslowreport.retry = 2
+
+# 报告邮件标题
+myslowreport.title = "MySQL慢日志报告"
+myslowreport.subject = "MySQL慢日志报告"
+# 报告邮件From
+myslowreport.from = "xxx运维平台"
+# 邮件服务器账号
+myslowreport.mailusername = "username"
+myslowreport.mailpassword = "password"
+myslowreport.mailhost = "mail.xxx.com"
+myslowreport.mailport = "25"
+# 报告邮件To 多个邮箱地址以 ; 分割
+myslowreport.toops = "user1@qq.com;user2@qq.com"
+myslowreport.todev = ""
+myslowreport.toleader = ""
+myslowreport.totest = ""
+# 报告邮件列名列宽配置
+myslowreport.cols = "慢查询例句,300|出现次数,50|数据库用户,50|最快查询时间(秒),50|最慢查询时间(秒),50|查询时间(95%),50|最快锁时间(秒),50|最慢锁时间(秒),50|锁时间(秒)(95%),50|最少扫描行数,50|最多扫描行数,50|扫描行数(95%),50"
+
+# 业务信息列表
+# 每个业务以 ; 分割
+# 业务信息字段以 | 分割
+# mysql服务ip|mysql服务端口|存放慢日志的数据库中对应该mysql服务器的表名,每个mysql服务一个进行区分|涉及业务|mysql服务所在服务器rsync模块名|mysql服务慢日志文件名
+myslowreport.projects = "192.168.10.121|3306|myslow_history_10_121_3306|xxx|myslow|localhost-slow.log;"
+# 同步各个mysql服务器的慢日志的存放目录
+myslowreport.slowlogpath = "/home/www/log/myslow/"
+myslowreport.ptquerydigest= "/usr/local/bin/pt-query-digest"
