1.增加月报表cron配置 2.增加跟踪表配置

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -14,6 +14,8 @@ myslowreport.timeout = 30
 myslowreport.syncmysqlslowlogspec = "0, 0, 4, *, *, *"
 # 每天早上7点生成报告邮件并发送
 myslowreport.sendreportemailspec = "0, 0, 7, *, *, *"
+# 每个月1号凌晨5点导入mysql服务器的月份慢日志
+myslowreport.importmonthlyspec = "0, 0, 5, 1, *, *"
 # 邮件发送失败重试次数
 myslowreport.retry = 2
 
@@ -34,6 +36,16 @@ myslowreport.toleader = ""
 myslowreport.totest = ""
 # 报告邮件列名列宽配置
 myslowreport.cols = "慢查询例句,300|出现次数,50|数据库用户,50|最快查询时间(秒),50|最慢查询时间(秒),50|查询时间(95%),50|最快锁时间(秒),50|最慢锁时间(秒),50|锁时间(秒)(95%),50|最少扫描行数,50|最多扫描行数,50|扫描行数(95%),50"
+
+# 跟踪表
+# 业务组;mysql实例名称,涉及业务,负责人信息;...|...
+# 每个业务组信息以 | 分割
+# 业务组信息内部以 ; 分割
+# 业务组信息内部第一段是 业务大组名称
+# 业务大组名称后续的段均为mysql实例以及相关业务信息 具体信息以 , 分割
+# 实例名称,涉及业务,负责人信息 其中负责人信息格式为: 张三(zs@xxx.com)#李四(ls@xxx.com)
+myslowreport.tracesheets = "xxx;192_168_10_1_3306,yyy,张三(zs@xxx.com);192_168_10_2_3306,zzz,李四(ls@xxx.com)"
+myslowreport.tracecols = "MySQL实例|慢查询例句|出现次数|查询时间(95%)|数据库用户|负责人|用途说明|优化进度|特殊说明"
 
 # 业务信息列表
 # 每个业务以 ; 分割
