1.增加月报目录配置

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -54,4 +54,5 @@ myslowreport.tracecols = "MySQL实例|慢查询例句|出现次数|查询时间(95%)|数据库用户
 myslowreport.projects = "192.168.10.121|3306|myslow_history_10_121_3306|xxx|myslow|localhost-slow.log;"
 # 同步各个mysql服务器的慢日志的存放目录
 myslowreport.slowlogpath = "/home/www/log/myslow/"
+myslowreport.slowlogmonthlypath = "/home/www/log/myslow/monthly/"
 myslowreport.ptquerydigest= "/usr/local/bin/pt-query-digest"
