增加慢日志报告可忽略的数据库用户列表配置

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -56,3 +56,7 @@ myslowreport.projects = "192.168.10.121|3306|myslow_history_10_121_3306|xxx|mysl
 myslowreport.slowlogpath = "/home/www/log/myslow/"
 myslowreport.slowlogmonthlypath = "/home/www/log/myslow/monthly/"
 myslowreport.ptquerydigest= "/usr/local/bin/pt-query-digest"
+
+# 慢日志报告可忽略的数据库用户列表(有些用户用于备份数据等其他特殊用途)
+# 多个用户以 | 分割
+myslowreport.ignoredbusers = "backup"
