增加钉钉提醒配置

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -60,3 +60,10 @@ myslowreport.ptquerydigest= "/usr/local/bin/pt-query-digest"
 # 慢日志报告可忽略的数据库用户列表(有些用户用于备份数据等其他特殊用途)
 # 多个用户以 | 分割
 myslowreport.ignoredbusers = "backup"
+
+# 钉钉
+myslowreport.ddwebhook = ""
+myslowreport.ddtips = "各位好, 月报以及优化跟踪表已发送至各位公司邮箱, 请及时查收"
+myslowreport.ddtimeout = 10
+myslowreport.ddretry = 2
+myslowreport.ddatlist = "12312341234,张三"
